# VBC_AI

./: .env.example  .gitignore  Dockerfile  README.md  VBC_AI_Project_Presentation.md  docker-compose.yml  document_handler.py  examine_contracts.py  llm_analyzer.py  main.py  pdf_processor.py  pyproject.toml  qdrant_store.py
backend/: lint.py  pyproject.toml
backend/app/: auth.py  config.py  main.py  models.py  prompts.py
backend/app/database/: queries.py
backend/app/models/: ingestion.py
backend/app/routes/: __init__.py  auth.py  chat.py  documents.py  system.py
backend/app/services/: __init__.py  chat_service.py  database.py  document_service.py  ingestion.py  llm_analyzer.py  parsing.py  qdrant_store.py  retrieval.py  vbc_analyzer.py
backend/app/services/ingestion/: __init__.py  analysis_service.py  chunking_service.py  ingestion_service.py  pipeline.py  vector_service.py
backend/app/storage/: document_storage.py
backend/app/utils/: deduplication.py  file_validation.py  logger.py
backend/db/: init.sql
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx
frontend/src/components/: DocumentUpload.css  DocumentUpload.tsx  SimpleChatInterface.css  SimpleChatInterface.tsx
frontend/src/services/: VBCApiService.ts
