[project]
name = "vbc-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn>=0.32.1",
    "pydantic>=2.10.3",
    "python-multipart>=0.0.20",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.8",
]
