[project]
name = "vbc-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn>=0.32.1",
    "pydantic>=2.10.3",
    "python-multipart>=0.0.20",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.29",
    "langchain-qdrant>=0.2.0",
    "pypdf>=5.9.0",
    "python-dotenv>=1.1.1",
    "qdrant-client>=1.11.0",
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "greenlet>=3.2.4",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.8",
]
